[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S"]
ignore = [
    # we only use asserts for type narrowing
    "S101",
    # FIXME: Add timeouts to requests
    "S113",
    # client tool can use subprocess as they like
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"examples/*" = ["S"]
