[metadata]
name = git-pw
summary = Git-Patchwork integration tool
description_file = README.rst
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = git patchwork
author = Stephen Finucane
author_email = stephen@that.guru
url = https://github.com/getpatchwork/git-pw
project_urls =
    Bug Tracker = https://github.com/getpatchwork/git-pw/issues
    Source Code = https://github.com/getpatchwork/git-pw
    Documentation = https://git-pw.readthedocs.io
python_requires = >=3.7

[files]
packages =
    git_pw

[entry_points]
console_scripts =
    git-pw = git_pw.shell:cli
